@startuml
title Mapeamento do Diagrama de Classe para o Modelo ER

entity USUARIO {
  * id: UUID
  --
  email: varchar(180)
  senha_hash: varchar(255)
  ativo: boolean
  saldo: int
}

entity ALUNO {
  * id: UUID <<PK/FK USUARIO.id>>
}

entity PROFESSOR {
  * id: UUID <<PK/FK USUARIO.id>>
  --
  saldo_inicial: int <<DEFAULT 1000>>
}

entity EMPRESA {
  * id: UUID
  --
  nome: varchar(120)
  cnpj: varchar(18)
  ativa: boolean
}

entity VANTAGEM {
  * id: UUID
  --
  titulo: varchar(120)
  descricao: text
  custo_moedas: int
  foto_url: text
  ativa: boolean
  empresa_id: UUID <<FK EMPRESA.id>>
}

entity RESGATE {
  * id: UUID
  --
  codigo: varchar(40)
  status: varchar(20)
  solicitado_em: timestamp
  consumido_em: timestamp
  aluno_id: UUID <<FK ALUNO.id>>
  vantagem_id: UUID <<FK VANTAGEM.id>>
}

entity TRANSACAO {
  * id: UUID
  --
  usuario_id: UUID <<FK USUARIO.id>>
  valor: int        -- positivo = crédito, negativo = débito
  descricao: text
  criada_em: timestamp
}

' ===== Relacionamentos =====
EMPRESA ||--o{ VANTAGEM
ALUNO ||--o{ RESGATE
VANTAGEM ||--o{ RESGATE
USUARIO ||--o{ TRANSACAO

@enduml
